--- a/jcvideoplayer-lib/build.gradle
+++ b/jcvideoplayer-lib/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
 
     defaultConfig {
         minSdkVersion 16
@@ -25,6 +24,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.3.0'
+    implementation 'com.ksyun.media:libksyplayer-java:2.1.2'
+    implementation 'com.ksyun.media:libksyplayer-armv7a:2.1.2'
 }
 
 apply from: '../gradle/maven_push.gradle'
